# python-data-analysis-basics

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/processed/: sales_clean.csv
data/raw/: sales_messy.csv
reports/: iris_summary.md  sales_summary.md
scripts/: generate_sales_messy.py  run_iris_analysis.py  run_sales_analysis.py
src/analysis_project/: clean.py  load.py  summarize.py  visualize.py
