[project]
name = "python-data-analysis-basics"
version = "1.0.0"
description = "Beginner-friendly data analysis project using pandas and matplotlib with included datasets."
requires-python = ">=3.10"
dependencies = ["pandas", "numpy", "matplotlib"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
